<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Espirituosos">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/opbespirito"
        android:textAlignment="center"
        android:textSize="16pt"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="417dp"
        android:layout_height="661dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="206.5dp"
                    android:layout_height="225dp"
                    android:src="@drawable/jack" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="206.5dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/espi2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="206.5dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_wine_bar_24"
                    android:padding="5dp"
                    android:text="@string/oespi1" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="206.5dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:drawableStart="@drawable/baseline_wine_bar_24"
                    android:text="@string/oespi2"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="206.5dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_info_24"
                    android:padding="5dp"
                    android:text="@string/infoespi1" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="206.5dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_info_24"
                    android:drawablePadding="8dp"
                    android:padding="5dp"
                    android:text="@string/infoespi2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="206.5dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/twotone_monetization_on_24"
                    android:padding="5dp"
                    android:text="@string/precooespi1" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="206.5dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/twotone_monetization_on_24"
                    android:padding="5dp"
                    android:text="@string/precooespi2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="206.5dp"
                    android:layout_height="200dp"
                    android:src="@drawable/espi3" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="206.5dp"
                    android:layout_height="200dp"
                    android:layout_weight="8"
                    app:srcCompat="@drawable/espi4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="206.5dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_wine_bar_24"
                    android:text="@string/oespi3" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/baseline_wine_bar_24"
                    android:text="@string/oespi4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="206.5dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_info_24"
                    android:text="@string/infoespi3" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/baseline_info_24"
                    android:text="@string/infoespi4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="206.5dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/twotone_monetization_on_24"
                    android:text="@string/precooespi3" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/twotone_monetization_on_24"
                    android:text="@string/precooespi4" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>